# qqzeng-ip

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  index.html  qqzeng-ip-benchmark  qqzeng-ip-dat  qqzeng-ip.txt  railway.toml
.github/: README.md
3.0/: qqzeng-ip-dotnet.cs
3.0/qqzeng-ip-erlang/geoip/crates/geoip/: Cargo.toml  build.rs
3.0/qqzeng-ip-erlang/geoip/crates/geoip/benches/: bench.rs
3.0/qqzeng-ip-erlang/geoip/crates/geoip/src/: atoms.rs  lib.rs  nif.rs  options.rs
3.0/qqzeng-ip-erlang/geoip/crates/geoip/tests/: geoip_test.rs
3.0/qqzeng-ip-rust/: .gitignore  Cargo.toml  README.md  build.rs  tool.sh
3.0/qqzeng-ip-rust/src/: geoip.rs  lib.rs  raw.rs
6.0/: .gitignore  CHANGELOG.md  LICENSE  README.md
archive/: README.md
c#/: IPSearch.cs
demo/: README.md  qqzeng-ip-test.csv  qqzeng-ip-test.qzdb
demo-data/: ofca_hk_likely_personal_mobile_segments.csv  ofca_hk_likely_personal_mobile_summary.txt  ofca_hk_number_prefix_ranges.csv  ofca_hk_number_segments_all.csv  ofca_hk_number_segments_readme.md  qqzeng-ip-range.txt
java/: IPEntity.java  IPIndex.java  IPString.java
java2/: IpIO.java
mssql/: Loading_Data_into_MSSQL.sql  README.md  area.sql  ip.sql  ip_cidr.sql  ip_range.sql  mssql.sql  phone.sql
mysql/: Loading_Data_into_MYSQL.sql  README.md  area.sql  ip.sql  ip_cidr.sql  ip_range.sql  mysql.sql  phone.sql
pgsql/: README.md  ip.sql  ip_cidr.sql  ip_range.sql
php/: IpSearch.php
qqzeng-ip-2.0/: README.md  qqzeng-ip-txt
qqzeng-ip-6.0/: README.md
qzdb/rust/: Cargo.toml  README.md
qzdb/rust/src/: lib.rs  main.rs
(+290 files in other folders)
